RESOLVED FIXED296974
[Navigation API] Rejected errors are wrapped in UnknownError instead of preserving original error.
https://bugs.webkit.org/show_bug.cgi?id=296974
Summary [Navigation API] Rejected errors are wrapped in UnknownError instead of prese...
Basuke Suzuki
Reported 2025-08-05 16:48:05 PDT
Based on WTP tests, it should be throw errors as is without wrapping it.
Attachments
Basuke Suzuki
Comment 1 2025-08-05 16:48:44 PDT
Basuke Suzuki
Comment 2 2025-08-07 16:00:14 PDT
EWS
Comment 3 2025-08-08 09:44:54 PDT
Committed 298399@main (fe410c871b16): <https://commits.webkit.org/298399@main> Reviewed commits have been landed. Closing PR #49089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.