[Navigation API] Rejected errors are wrapped in UnknownError instead of preserving original error. https://bugs.webkit.org/show_bug.cgi?id=296974 rdar://157320005

Reviewed by Tim Nguyen.

The Navigation API was incorrectly wrapping all rejected errors from navigate event handlers in `UnknownError` exceptions,
which masked the original error types and messages. This change preserves the original error objects when rejecting navigation
promises.

Remove unnecessary wrapping of errors in `UnknownError` exceptions in `Navigation::innerDispatchNavigateEvent`.

* LayoutTests/http/wpt/navigation-api/transition-promises-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/anchor-download-intercept-reject_currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/anchor-download-intercept-reject_no-currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-same-document-intercept-reject_currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/navigate-same-document-intercept-reject_no-currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/reload-intercept-reject_currententrychange-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/ordering-and-transition/reload-intercept-reject_no-currententrychange-expected.txt:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):
* Source/WebCore/page/NavigationTransition.cpp:
(WebCore::NavigationTransition::rejectPromise):
* Source/WebCore/page/NavigationTransition.h:

Canonical link: https://commits.webkit.org/298399@main